--- a/Sistema/Facturacion/templates/Facturacion/administracion/Factura/listar_factura.html
+++ b/Sistema/Facturacion/templates/Facturacion/administracion/Factura/listar_factura.html
@@ -5,7 +5,7 @@
           <div class="">
             <div class="page-title">
               <div class="title_left">
-                <h3><small>Lista de Factura</small></h3>
+                <h3><small>Lista de Facturas</small></h3>
               </div>
 
               <div class="title_right">
